update pom.xml update trangchu